@@ -187,6 +187,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12021: Make mmap's read() method argument optional. Patch by Petri
+  Lehtinen.
+
 - Issue #9205: concurrent.futures.ProcessPoolExecutor now detects killed
   children and raises BrokenProcessPool in such a situation.  Previously it
   would reliably freeze/deadlock.
